--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,25 +5,31 @@ logging.level.root = INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
 logging.level.org.springframework.cloud.gateway = TRACE
 
+#spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+#spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+
 ## registration-service routing
 spring.cloud.gateway.routes[0].id = registration-service
 spring.cloud.gateway.routes[0].uri = lb://registration-service
-spring.cloud.gateway.routes[0].predicates[0] = Path=/api/registration
+spring.cloud.gateway.routes[0].predicates[0] = Path=/api/registration/**
 
 ## login-service routing
 spring.cloud.gateway.routes[1].id = login-service
 spring.cloud.gateway.routes[1].uri = lb://login-service
-spring.cloud.gateway.routes[1].predicates[0] = Path=/api/login
+spring.cloud.gateway.routes[1].predicates[0] = Path=/api/login/**
 
 ## balance-service routing
 spring.cloud.gateway.routes[2].id = balance-service
 spring.cloud.gateway.routes[2].uri = lb://balance-service
-spring.cloud.gateway.routes[2].predicates[0] = Path=/api/balance
+spring.cloud.gateway.routes[2].predicates[0] = Path=/api/balance/**
 
 ## payment-service routing
 spring.cloud.gateway.routes[3].id = payment-service
 spring.cloud.gateway.routes[3].uri = lb://payment-service
-spring.cloud.gateway.routes[3].predicates[0] = Path=/api/payment
+spring.cloud.gateway.routes[3].predicates[0] = Path=/api/payment/**
 
 ## discovery-service routing
 spring.cloud.gateway.routes[4].id = discovery-service
