load balancing now working

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,11 +5,8 @@ logging.level.root = INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
 logging.level.org.springframework.cloud.gateway = TRACE
 
-#spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
-#spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+eureka.instance.instanceId=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
 
 ## registration-service routing
 spring.cloud.gateway.routes[0].id = registration-service
