--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -2,3 +2,6 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8761
+
+eureka.instance.instanceId=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
