--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=payment-service
 server.port = 0
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+
+eureka.instance.instanceId=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
